--- a/Excercises/Excercise-8.ipynb
+++ b/Excercises/Excercise-8.ipynb
@@ -45,9 +45,16 @@
    "outputs": [],
    "source": [
     "# Dummy Variable Method\n",
+    "# Create dummy variables for 'Car Model' (drop_first=True avoids dummy variable trap)\n",
     "dummies = pd.get_dummies(data['Car Model'], drop_first=True)\n",
+    "\n",
+    "# Combine dummy columns with the original data\n",
     "df_dummy = pd.concat([data, dummies], axis=1)\n",
+    "\n",
+    "# Independent variables (features)\n",
     "X_dummy = df_dummy[['Mileage', 'Age(yrs)'] + list(dummies.columns)]\n",
+    "\n",
+    "# Dependent variable (target)\n",
     "y_dummy = df_dummy['Sell Price($)']"
    ]
   },
@@ -650,8 +657,9 @@
     }
    ],
    "source": [
+    "# Train linear regression model using dummy variables\n",
     "model_dummy = LinearRegression()\n",
-    "model_dummy.fit(X_dummy, y_dummy)\n"
+    "model_dummy.fit(X_dummy, y_dummy)"
    ]
   },
   {
@@ -1261,37 +1269,31 @@
    ],
    "source": [
     "# One Hot Encoding Method\n",
+    "# Encode car model labels numerically first\n",
     "le = LabelEncoder()\n",
     "data['Car Model Encoded'] = le.fit_transform(data['Car Model'])\n",
     "\n",
+    "# Apply OneHotEncoder using ColumnTransformer\n",
+    "# drop='first' prevents redundancy\n",
     "ct = ColumnTransformer(\n",
     "    transformers=[('encoder', OneHotEncoder(drop='first'), [0])],\n",
     "    remainder='passthrough'\n",
     ")\n",
+    "\n",
+    "# Transform features into encoded form\n",
     "X_ohe = ct.fit_transform(data[['Car Model Encoded', 'Mileage', 'Age(yrs)']])\n",
     "y_ohe = data['Sell Price($)']\n",
     "\n",
+    "# Train linear regression model using one-hot encoding\n",
     "model_ohe = LinearRegression()\n",
     "model_ohe.fit(X_ohe, y_ohe)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'tk' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mCustomCombobox\u001b[39;00m(\u001b[43mtk\u001b[49m.Frame):\n\u001b[32m      2\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, master, values, variable, **kwargs):\n\u001b[32m      3\u001b[39m         \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m(master, **kwargs)\n",
-      "\u001b[31mNameError\u001b[39m: name 'tk' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class CustomCombobox(tk.Frame):\n",
     "    def __init__(self, master, values, variable, **kwargs):\n",
@@ -1299,9 +1301,11 @@
     "        self.variable = variable\n",
     "        self.values = values\n",
     "\n",
+    "        # Entry widget showing selected value (readonly)\n",
     "        self.entry = tk.Entry(self, textvariable=self.variable, state=\"readonly\")\n",
     "        self.entry.grid(row=0, column=0, sticky=\"ew\")\n",
-    "\n",
+    "        \n",
+    "        # Button that opens dropdown list\n",
     "        self.button = tk.Button(self, text=\"▼\", command=self.show_list, width=2)\n",
     "        self.button.grid(row=0, column=1)\n",
     "\n",
@@ -1311,11 +1315,13 @@
     "        if self.listbox:\n",
     "            self.listbox.destroy()\n",
     "\n",
+    "        # Create Listbox with up to 5 visible items\n",
     "        self.listbox = tk.Listbox(self, height=min(5, len(self.values)))\n",
     "        for val in self.values:\n",
     "            self.listbox.insert(tk.END, val)\n",
     "        self.listbox.grid(row=1, column=0, columnspan=2, sticky=\"ew\")\n",
-    "\n",
+    "        \n",
+    "        # Bind events for user selection\n",
     "        self.listbox.bind(\"<ButtonRelease-1>\", self.on_click)\n",
     "        self.listbox.bind(\"<Double-Button-1>\", self.on_click)\n",
     "        self.listbox.bind(\"<Return>\", self.on_enter)\n",
@@ -1371,6 +1377,7 @@
     "    except ValueError:\n",
     "        return False\n",
     "\n",
+    "# Register validation command\n",
     "vcmd = (root.register(validate_non_negative), \"%P\")"
    ]
   },
@@ -1443,6 +1450,7 @@
    "source": [
     "# Prediction Function\n",
     "def predict_price():\n",
+    "    \"\"\"Predict car price based on selected inputs and encoding method.\"\"\"\n",
     "    try:\n",
     "        car = car_model_var.get()\n",
     "        mileage = float(mileage_var.get())\n",
@@ -1453,18 +1461,28 @@
     "            result_label.config(text=\"Please select a car model\")\n",
     "            return\n",
     "\n",
+    "        # If user selected Dummy Variable method\n",
     "        if method == \"dummy\":\n",
-    "            input_df = pd.DataFrame([[mileage, age] + [1 if col == car else 0 for col in dummies.columns]],\n",
-    "                                    columns=['Mileage', 'Age(yrs)'] + list(dummies.columns))\n",
+    "            input_df = pd.DataFrame(\n",
+    "                [[mileage, age] + [1 if col == car else 0 for col in dummies.columns]],\n",
+    "                columns=['Mileage', 'Age(yrs)'] + list(dummies.columns)\n",
+    "            )\n",
     "            pred = model_dummy.predict(input_df)[0]\n",
+    "\n",
+    "        # If user selected One-Hot Encoding method\n",
     "        else:\n",
     "            car_encoded = le.transform([car])[0]\n",
-    "            input_df = pd.DataFrame([[car_encoded, mileage, age]],\n",
-    "                                    columns=['Car Model Encoded', 'Mileage', 'Age(yrs)'])\n",
+    "            input_df = pd.DataFrame(\n",
+    "                [[car_encoded, mileage, age]],\n",
+    "                columns=['Car Model Encoded', 'Mileage', 'Age(yrs)']\n",
+    "            )\n",
     "            X_new = ct.transform(input_df)\n",
     "            pred = model_ohe.predict(X_new)[0]\n",
     "\n",
+    "        # Prevent negative predicted prices\n",
     "        pred = max(pred, 0)\n",
+    "\n",
+    "        # Display result\n",
     "        result_label.config(text=f\"Predicted Price: ${pred:,.2f}\")\n",
     "\n",
     "    except Exception as e:\n",
